--- a/edvora-homepage/package.json
+++ b/edvora-homepage/package.json
@@ -19,6 +19,7 @@
     "underscore": "^1.13.2"
   },
   "devDependencies": {
+    "@iconify/react": "^3.1.3",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10"
   }
